# customer-support-agent-example

./: .ae_ignore  .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
agents/: _common.py  _runtime_a2a.py
agents/account_context/: agent.py
agents/collaborative/: __init__.py  agent.py
agents/collaborative_ideas/: __init__.py  agent.py
agents/collaborative_summary/: __init__.py  agent.py
agents/comfort/: agent.py
agents/coordinator/: ag_ui_app.py  agent.py  candidates.py  clarify.py  clarify_models.py  evaluation.py  planner.py  planner_models.py  recommendation.py  recommendation_prompts.py
agents/customer_communication/: agent.py
agents/diagnostics/: __init__.py  agent.py
agents/escalation_policy/: agent.py
agents/experience/: agent.py
agents/incident_status/: agent.py
agents/knowledge_base/: agent.py
agents/risk/: agent.py
agents/ticket_history/: agent.py
scripts/: cleanup_all.sh  deploy_all.sh  runtime_env_from_resources.py
src/acmedesk_support/: diagnostics.py
src/hirenest_support/: __init__.py
tests/: test_ag_ui_app.py  test_agent_imports.py  test_coordinator_graph.py  test_customer_communication.py  test_diagnostics.py
