[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-travel-planning-agent"
version = "0.1.0"
description = "ADK Graph Workflow travel planning agent with dynamic research and multi-agent evaluation"
requires-python = ">=3.11"
dependencies = [
  "google-adk[a2a]==2.1.0",
  "google-cloud-aiplatform[agent_engines]==1.153.1",
  "a2a-sdk[http-server]==0.3.26",
  "pydantic==2.12.5",
  "python-dotenv==1.2.1",
  "uvicorn==0.38.0",
  "fastapi==0.136.3",
  "ag-ui-adk>=0.6.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.14",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["agents*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
